--- a/animation.html
+++ b/animation.html
@@ -45,6 +45,20 @@
         <div class="container">
             <hr class="featurette-divider">
             <div class="row featurette">
+                <div class="col-md-7">
+                    <h3 class="featurette-heading">掉落的小球 X Cinema 4D</h3>
+                    <p>
+                    上次是用内置的动力学模拟的运动，这一次是手动K帧，愈发觉得，期末要做的作业会是一个大坑。
+                    </p>
+                </div>
+                <div class="col-md-5">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="https://player.bilibili.com/player.html?aid=77932322&cid=133328771&page=1" scrolling="no" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+                    </div>
+                </div>
+            </div>
+            <hr class="featurette-divider">
+            <div class="row featurette">
                 <div class="col-md-7 order-md-2">
                     <h3 class="featurette-heading">一切都将沦为调色 X disguise</h3>
                     <p>
