--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
             <div class="card-columns">
                 <div class="card shadow-sm">
                     <div class="card-body">
+                        <p class="card-text">「其实有时候觉得很有意思，因为年轻的时候觉得 The truth is more important than anything else。但现在了，年纪大了就觉得 what is important is not just the truth but also the other things better as important, for example, other people's feelings. As long as i don't have to living in a lie and also as long as i'm not been denied to live the way i want to live my life」—— All in My Family (2019)[吴皓]</p>
+                        <p class="card-text text-right"><small class="text-muted">2019.12.4</small></p>
+                    </div>
+                </div>
+                <div class="card shadow-sm">
+                    <div class="card-body">
                         <p class="card-text">「我觉得最好的交互，是在于，它先与我互动，然后我意识到我可以与它产生互动，进而去探索更多的方式，以求再为深入的体验。」</p>
                         <p class="card-text text-right"><small class="text-muted">2019.12.2</small></p>
                     </div>
