--- a/blogs/20191220.html
+++ b/blogs/20191220.html
@@ -7,32 +7,32 @@
     <title>Xin-Scarecrow | 旅行</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
 </head>
 
 <body class="d-flex flex-column h-100">
     <header style="padding-top: 56px">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-            <a class="navbar-brand" href="index.html"> <img src="images/icon-light.png" width="30" height="30"
+            <a class="navbar-brand" href="../index.html"> <img src="../images/icon-light.png" width="30" height="30"
                     class="d-inline-block align-top" alt=""> Xin-Scarecrow </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"> <span
                     class="navbar-toggler-icon"></span> </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
-                    <li class="nav-item"> <a class="nav-link" href="index.html">一念之间</a> </li>
-                    <li class="nav-item active"> <a class="nav-link" href="travel.html">旅行<span
+                    <li class="nav-item"> <a class="nav-link" href="../index.html">一念之间</a> </li>
+                    <li class="nav-item active"> <a class="nav-link" href="../travel.html">旅行<span
                                 class="sr-only">(current)</span></a> </li>
                     <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#"
                             id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false">作品</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="photography.html">光影</a>
-                            <a class="dropdown-item" href="animation.html">动画</a>
-                            <a class="dropdown-item" href="film.html">短片</a>
+                            <a class="dropdown-item" href="../photography.html">光影</a>
+                            <a class="dropdown-item" href="../animation.html">动画</a>
+                            <a class="dropdown-item" href="../film.html">短片</a>
                         </div>
                     </li>
-                    <li class="nav-item"> <a class="nav-link" href="Real me.html">Real me</a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="../Real me.html">Real me</a> </li>
                 </ul>
             </div>
         </nav>
@@ -40,31 +40,18 @@
     <main role="main">
         <div class="container">
             <div class="row">
-                <aside class="col-md-4 blog-sidebar">
-                    <div class="p-4 mb-3 mt-3 bg-light rounded">
-                        <h4>所谓旅行</h4>
-                        <p class="mb-0">
-                            从一处地方到另一处地方<br>
-                            从一个熟悉的环境到一个不那么熟悉的环境<br>
-                            一个人，或者和一些人<br>
-                        </p>
-                    </div>
-                </aside>
-                <div class="col-md-8 mt-3 blog-main">
+                <div class="col-md-12 mt-3 blog-main">
                     <div class="blog-post">
                         <h2 class="blog-post-title">精匠纸心 X 造纸艺术工作坊@SCA</h2>
-                        <small class="blog-post-meta text-muted">201912月20日</small>
-                        <p></p>
-                        <a href="blogs/20191220.html">...</a>
+                        <small class="blog-post-meta text-muted">2019年12月20日</small>
                         <hr>
-                    </div>
-                </div>
-                <div class="col-md-8 mt-3 blog-main">
-                    <div class="blog-post">
-                        <h2 class="blog-post-title">虚拟与现实 X 数据礁工作坊@SCA</h2>
-                        <small class="blog-post-meta text-muted">2019年11月30日-2019年12月01日</small>
-                        <p>又是一个周末，期待许久。</p>
-                        <a href="blogs/20191201.html">...</a>
+                        <p></p>
+                        <p></p>
+                        <video src="blog_videos/Data Reef.mov" class="col-6 offset-3 my-3" controls></video>
+
+                        <p>相关内容：</p>
+                        <a href="https://mp.weixin.qq.com/s/agbqdOsRr1HUWJofk3o7-A">创艺·说| 精匠纸心 —— 造纸艺术工作坊招募开启</a>
+                        <img src="blog_images/Paper Art.jpg" class="col-6 offset-3 my-3" alt="Paper Art">
                         <hr>
                     </div>
                 </div>
@@ -74,7 +61,7 @@
     <footer class="mt-auto">
         <hr>
         <div class="container">
-                <img src="images/icon-dark.png" alt="icon" width="30px">
+                <img src="../images/icon-dark.png" alt="icon" width="30px">
                 <small class="text-muted">&copy;2019 Xin-Scarecrow. All rights reserved.</small>
                 <p class="text-center text-white"><small>Designed by Yuxin_H.</small></p>
                 <p class="text-right"><a href="#">Back to top</a></p>
