--- a/blogs/20191201.html
+++ b/blogs/20191201.html
@@ -50,7 +50,8 @@
                         <video src="blog_videos/Data Reef.mov" class="col-6 offset-3 my-3" controls></video>
 
                         <p>相关内容：</p>
-                        <a href="https://mp.weixin.qq.com/s/ZWg_hI2CePdgKLXNnc-5UA">触感数字工作坊 | Data Reef 数据礁 : 空间建构与数码群落</a><br>
+                        <a href="https://mp.weixin.qq.com/s/ZWg_hI2CePdgKLXNnc-5UA">触感数字工作坊 | Data Reef 数据礁 : 空间建构与数码群落</a>
+                        <br>
                         <a href="https://mp.weixin.qq.com/s/TSNqBoNCFtUe6opV2J016Q">【活动回顾】“数据礁”工作坊——XR设计和应用的奇妙海洋</a>
                         <img src="blog_images/Data Reef.jpg" class="col-6 offset-3 my-3" alt="Data Reef">
                         <hr>
