--- a/travel.html
+++ b/travel.html
@@ -52,16 +52,16 @@
                 </aside>
                 <div class="col-md-8 mt-3 blog-main">
                     <div class="blog-post">
-                        <h2 class="blog-post-title">精匠纸心 X 造纸艺术工作坊@SCA</h2>
-                        <small class="blog-post-meta text-muted">201912月20日</small>
+                        <h2 class="blog-post-title"><a href="blogs/20191220.html" style="color:whitesmoke;">精匠纸心 X 造纸艺术工作坊@SCA</a></h2>
+                        <small class="blog-post-meta text-muted">2019年12月20日</small>
                         <p></p>
                         <a href="blogs/20191220.html">...</a>
                         <hr>
                     </div>
                 </div>
-                <div class="col-md-8 mt-3 blog-main">
+                <div class="col-md-12 mt-3 blog-main">
                     <div class="blog-post">
-                        <h2 class="blog-post-title">虚拟与现实 X 数据礁工作坊@SCA</h2>
+                        <h2 class="blog-post-title"><a href="blogs/20191201.html" style="color:lightcoral;">虚拟与现实 X 数据礁工作坊@SCA</a></h2>
                         <small class="blog-post-meta text-muted">2019年11月30日-2019年12月01日</small>
                         <p>又是一个周末，期待许久。</p>
                         <a href="blogs/20191201.html">...</a>
