--- a/travel.html
+++ b/travel.html
@@ -52,7 +52,7 @@
                 </aside>
                 <div class="col-md-8 mt-3 blog-main">
                     <div class="blog-post">
-                        <h2 class="blog-post-title"><a href="blogs/20191220.html" style="color:whitesmoke;">精匠纸心 X 造纸艺术工作坊@SCA</a></h2>
+                        <h2 class="blog-post-title"><a href="blogs/20191220.html" style="color:rgb(240, 219, 179);">精匠纸心 X 造纸艺术工作坊@SCA</a></h2>
                         <small class="blog-post-meta text-muted">2019年12月20日</small>
                         <p></p>
                         <a href="blogs/20191220.html">...</a>
