--- a/blogs/20191220.html
+++ b/blogs/20191220.html
@@ -47,7 +47,7 @@
                         <hr>
                         <p></p>
                         <p></p>
-                        <video src="blog_videos/Data Reef.mov" class="col-6 offset-3 my-3" controls></video>
+                        <!-- <video src="blog_videos/" class="col-6 offset-3 my-3" controls></video> -->
 
                         <p>相关内容：</p>
                         <a href="https://mp.weixin.qq.com/s/agbqdOsRr1HUWJofk3o7-A">创艺·说| 精匠纸心 —— 造纸艺术工作坊招募开启</a>
