--- a/404.html
+++ b/404.html
@@ -1,12 +1,159 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="zh" class="h-100">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>404</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9YZNQRQW53"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-9YZNQRQW53');
+    </script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Xin-Scarecrow | 一念之间</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
-<body>
-    <h1>不好意思，你去错地方了</h1>
+
+<body class="d-flex flex-column h-100">
+    <header style="padding-top: 56px">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <a class="navbar-brand" href="index.html"> <img src="images/icon-light.png" width="30" height="30"
+                    class="d-inline-block align-top" alt=""> Xin-Scarecrow</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"> <span
+                    class="navbar-toggler-icon"></span> </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item active"> <a class="nav-link" href="index.html">一念之间<span
+                                class="sr-only">(current)</span></a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="travel.html">旅行</a> </li>
+                    <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#"
+                            id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false">作品</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="photography.html">光影</a>
+                            <a class="dropdown-item" href="animation.html">动画</a>
+                            <a class="dropdown-item" href="film.html">短片</a> </div>
+                    </li>
+                    <li class="nav-item"> <a class="nav-link" href="Real me.html">Real me</a> </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main role="main">
+        <div id="myCarousel" class="carousel slide carousel-fade" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active"> <img class="bd-placeholder-img" width="100%" height="auto"
+                        src="images/banner/莫干山.jpg" alt="莫干山">
+                    <div class="container">
+                        <div class="carousel-caption">
+                            <h6>涧</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item"> <img class="bd-placeholder-img" width="100%" height="auto"
+                        src="images/banner/Cloud.jpg" alt="Cloud">
+                    <div class="container">
+                        <div class="carousel-caption">
+                            <h6>云</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item"> <img class="bd-placeholder-img" width="100%" height="auto"
+                        src="images/banner/因为风的缘故.jpg" alt="因为风的缘故">
+                    <div class="container">
+                        <div class="carousel-caption">
+                            <h6>洛夫</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev"> <span
+                    class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span>
+            </a> <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next"> <span
+                    class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a>
+        </div>
+        <div class="container">
+            <hr>
+            <div class="card-columns">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <p class="card-text">「其实有时候觉得很有意思，因为年轻的时候觉得 The truth is more important than anything else。但现在了，年纪大了就觉得 what is important is not just the truth but also the other things better as important, for example, other people's feelings. As long as i don't have to living in a lie and also as long as i'm not been denied to live the way i want to live my life」—— All in My Family (2019)[吴皓]</p>
+                        <p class="card-text text-right"><small class="text-muted">2019.12.4</small></p>
+                    </div>
+                </div>
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <p class="card-text">「我觉得最好的交互，是在于，它先与我互动，然后我意识到我可以与它产生互动，进而去探索更多的方式，以求再为深入的体验。」</p>
+                        <p class="card-text text-right"><small class="text-muted">2019.12.2</small></p>
+                    </div>
+                </div>
+                <div class="card shadow-sm">
+                    <img src="images/lightning/剪影.jpg" class="card-img-top" alt="剪影">
+                    <div class="card-body">
+                        <p class="card-text">误入创艺一楼的小黑屋。——「风吹草动」</p>
+                        <p class="card-text text-right"><small class="text-muted">2019.11.8</small></p>
+                    </div>
+                </div>
+                <div class="card shadow-sm">
+                    <img src="images/lightning/天气之子.jpg" class="card-img-top" alt="天气之子">
+                    <div class="card-body">
+                        <p class="card-text">看过「天气之子」之后，就喜欢上了这个场景。</p>
+                        <p class="card-text text-right"><small class="text-muted">2019.11.8</small></p>
+                    </div>
+                </div>
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <p class="card-text">时常在想，生活中会有哪些不期而遇的事情。</p>
+                        <p class="card-text text-right"><small class="text-muted">2019.9.25</small></p>
+                    </div>
+                </div>
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <p class="card-text">一念之间的东西好微妙啊。</p>
+                        <p class="card-text text-right"><small class="text-muted">2019.9.22</small></p>
+                    </div>
+                </div>
+                <div class="card shadow-sm">
+                    <img src="images/lightning/可乐配雪糕.jpg" class="card-img-top" alt="可乐配雪糕">
+                    <div class="card-body">
+                        <p class="card-text">可乐配雪糕是我今天碰上的最美好的事情。——ZN</p>
+                        <p class="card-text text-right"><small class="text-muted">2019.9.21</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer class="mt-auto">
+        <hr>
+        <div class="container">
+            <img src="images/icon-dark.png" alt="icon" width="30px">
+            <small class="text-muted">&copy;2019 Xin-Scarecrow. All rights reserved.</small>
+            <p class="text-center text-white"><small>Designed by Yuxin_H. <span id="busuanzi_container_site_pv">哇！<span
+                            id="busuanzi_value_site_pv"></span>人找到我了。</span></small></p>
+            <p class="text-right"><a href="#">Back to top</a></p>
+        </div>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 </body>
+
 </html>
