--- a/Real me.html
+++ b/Real me.html
@@ -60,10 +60,10 @@
                     <h2 class="mb-3">Yuxin Hou</h2>
                     <p class="mb-5"></p>
                     <div class="social-icons">
-                        <a href="mailto:houyx@shanghaitech.edu.cn">
+                        <a href="mailto:scarecrow.hyx@icloud.com">
                             <img src="images/icons/email.png" alt="email" class="icon"></a>
                         <a data-toggle="tooltip" data-html="true" data-animation="true"
-                            title="<img src='images/icons/QR_wechat.jpg' class='img-fluid'>">
+                            title="QR_wechat.jpg">
                             <img src="images/icons/wechat.png" alt="wechat" class="icon"></a>
                         <a href="https://space.bilibili.com/6454144">
                             <img src="images/icons/bilibili.png" alt="bilibili" class="icon"
