--- a/Real me.html
+++ b/Real me.html
@@ -60,7 +60,7 @@
                     <h2 class="mb-3">Yuxin Hou</h2>
                     <p class="mb-5"></p>
                     <div class="social-icons">
-                        <a href="mailto:scarecrow.hyx@icloud.com">
+                        <a href="mailto:houyx@shanghaitech.edu.cn">
                             <img src="images/icons/email.png" alt="email" class="icon"></a>
                         <a data-toggle="tooltip" data-html="true" data-animation="true"
                             title="QR_wechat.jpg">
