--- a/blogs/20191201.html
+++ b/blogs/20191201.html
@@ -7,7 +7,7 @@
     <title>Xin-Scarecrow | 旅行</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -45,12 +45,14 @@
                         <h2 class="blog-post-title">虚拟与现实 X 数据礁工作坊@SCA</h2>
                         <small class="blog-post-meta text-muted">2019年11月30日-2019年12月01日</small>
                         <hr>
-                        <p>又是一个周末，期待许久。</p>
-                        <p>不同知识背景下的小伙伴，通力协作，创造了充实又非凡的周末生活。过程中，让我印象深刻的一个片段，是在构建的部分。当时我们拿着设计好的几何结构，准备组装。那么，在我们面前有两个选择：一是利用脑海中生成的映象；二是利用HoloLens投射的映像。一开始，我们觉得可以双管齐下，但当每个人体验了用HoloLens去组装之后，惊呼 Amazing！技术带来的精确生产，让整个组装效率获得了极大的提高。然而双刃剑下，我们也可能错失了与之伴随的或被称为创造力的「错误组装」。若是利用一种能够实时的捕获，计算，预测的技术，当我们主动地改变走向的时候，它能重新生成结构，甚至给出接下来的走向建议，这类带有交互式的体验，会更让我有身处未来的感觉，我对这样的未来充满了期待。</p>
+                        <p>不同知识背景下的小伙伴，通力协作，创造了充实又非凡的周末生活。过程中，让我印象深刻的一个片段，是在构建的部分。当时我们拿着设计好的几何结构，准备组装。那么，在我们面前有两个选择：一是利用脑海中生成的映象；二是利用HoloLens投射的映像。一开始，我们觉得可以双管齐下，但当每个人体验了用HoloLens去组装之后，惊呼
+                            Amazing！技术带来的精确生产，让整个组装效率获得了极大的提高。然而双刃剑下，我们也可能错失了与之伴随的或被称为创造力的「错误组装」。若是利用一种能够实时的捕获，计算，预测的技术，当我们主动地改变走向的时候，它能重新生成结构，甚至给出接下来的走向建议，这类带有交互式的体验，会更让我有身处未来的感觉，我对这样的未来充满了期待。
+                        </p>
                         <video src="blog_videos/Data Reef.mov" class="col-6 offset-3 my-3" controls></video>
 
                         <p>相关内容：</p>
-                        <a href="https://mp.weixin.qq.com/s/ZWg_hI2CePdgKLXNnc-5UA">触感数字工作坊 | Data Reef 数据礁 : 空间建构与数码群落</a><br>
+                        <a href="https://mp.weixin.qq.com/s/ZWg_hI2CePdgKLXNnc-5UA">触感数字工作坊 | Data Reef 数据礁 :
+                            空间建构与数码群落</a><br>
                         <a href="https://mp.weixin.qq.com/s/TSNqBoNCFtUe6opV2J016Q">【活动回顾】“数据礁”工作坊——XR设计和应用的奇妙海洋</a><br>
                         <img src="blog_images/Data Reef.jpg" class="col-6 offset-3 my-3" alt="Data Reef">
                         <hr>
@@ -62,11 +64,11 @@
     <footer class="mt-auto">
         <hr>
         <div class="container">
-                <img src="../images/icon-dark.png" alt="icon" width="30px">
-                <small class="text-muted">&copy;2019 Xin-Scarecrow. All rights reserved.</small>
-                <p class="text-center text-white"><small>Designed by Yuxin_H.</small></p>
-                <p class="text-right"><a href="#">Back to top</a></p>
-            </div>
+            <img src="../images/icon-dark.png" alt="icon" width="30px">
+            <small class="text-muted">&copy;2019 Xin-Scarecrow. All rights reserved.</small>
+            <p class="text-center text-white"><small>Designed by Yuxin_H.</small></p>
+            <p class="text-right"><a href="#">Back to top</a></p>
+        </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
