--- a/blogs/20191220.html
+++ b/blogs/20191220.html
@@ -45,10 +45,10 @@
                         <h2 class="blog-post-title">精匠纸心 X 造纸艺术工作坊@SCA</h2>
                         <small class="blog-post-meta text-muted">2019年12月20日</small>
                         <hr>
-                        <p></p>
-                        <p></p>
-                        <!-- <video src="blog_videos/" class="col-6 offset-3 my-3" controls></video> -->
-
+                        <p>金绣辰老师用一个下午的时间，带领我们体验了一次工作坊模式下的造纸艺术。</p>
+                        <p>压制成型的原浆板，在水中泡软，捞出撕碎，加水敲打成浆，再入水分散。继而用网板捞出，加点缀，再封一层，挤压成型。包好，回家晾干，纸成。</p>
+                        <p>本想在自制的纸上写些什么，然而自知笔墨不佳，到如今都未曾落笔。只好留待日后有勇气之时，再行书写好了。</p>
+                        <video src="blog_videos/Make Paper.mov" class="col-6 offset-3 my-3" controls></video>
                         <p>相关内容：</p>
                         <a href="https://mp.weixin.qq.com/s/agbqdOsRr1HUWJofk3o7-A">创艺·说| 精匠纸心 —— 造纸艺术工作坊招募开启</a>
                         <img src="blog_images/Paper Art.jpg" class="col-6 offset-3 my-3" alt="Paper Art">
