--- a/travel.html
+++ b/travel.html
@@ -54,8 +54,8 @@
                     <div class="blog-post">
                         <h2 class="blog-post-title"><a href="blogs/20191220.html" style="color:rgb(240, 219, 179);">精匠纸心 X 造纸艺术工作坊@SCA</a></h2>
                         <small class="blog-post-meta text-muted">2019年12月20日</small>
-                        <p></p>
-                        <a href="blogs/20191220.html">...</a>
+                        <p>金绣辰老师用一个下午的时间，带领我们体验了一次工作坊模式下的造纸艺术…</p>
+                        <a href="blogs/20191220.html">阅读全文</a>
                         <hr>
                     </div>
                 </div>
@@ -63,8 +63,8 @@
                     <div class="blog-post">
                         <h2 class="blog-post-title"><a href="blogs/20191201.html" style="color:lightcoral;">虚拟与现实 X 数据礁工作坊@SCA</a></h2>
                         <small class="blog-post-meta text-muted">2019年11月30日-2019年12月01日</small>
-                        <p>又是一个周末，期待许久。</p>
-                        <a href="blogs/20191201.html">...</a>
+                        <p>不同知识背景下的小伙伴，通力协作，创造了充实又非凡的周末生活…</p>
+                        <a href="blogs/20191201.html">阅读全文</a>
                         <hr>
                     </div>
                 </div>
