--- a/Real me.html
+++ b/Real me.html
@@ -90,7 +90,7 @@
         <hr>
         <div class="container">
             <img src="images/icon-dark.png" alt="icon" width="30px">
-            <small class="text-muted">&copy;2019 Xin-Scarecrow. All rights reserved.</small>
+            <small class="text-muted">&copy;2019-2020 Xin-Scarecrow. All rights reserved.</small>
             <p class="text-center text-white"><small>Designed by Yuxin_H.</small></p>
             <p class="text-right"><a href="#">Back to top</a></p>
         </div>
