--- a/blogs/20200625.html
+++ b/blogs/20200625.html
@@ -42,18 +42,25 @@
             <div class="row">
                 <div class="col-md-12 mt-3 blog-main">
                     <div class="blog-post">
-                        <h2 class="blog-post-title">虚拟与现实 X 工作坊@SCA</h2>
-                        <small class="blog-post-meta text-muted">2019年11月30日-2019年12月01日</small>
+                        <h2 class="blog-post-title">心绪不宁 X 随笔@Shanghai</h2>
+                        <small class="blog-post-meta text-muted">2020年06月25日</small>
                         <hr>
-                        <p>不同知识背景下的小伙伴，通力协作，创造了充实又非凡的周末生活。过程中，让我印象深刻的一个片段，是在构建的部分。当时我们拿着设计好的几何结构，准备组装。那么，在我们面前有两个选择：一是利用脑海中生成的映象；二是利用 HoloLens 投射的映像。一开始，我们觉得可以双管齐下，但当每个人体验了用 HoloLens 去组装之后，惊呼 Amazing！技术带来的精确生产，让整个组装效率获得了极大的提高。然而双刃剑下，我们也可能错失了与之伴随的或被称为创造力的「错误组装」。若是利用一种能够实时的捕获，计算，预测的技术，当我们主动地改变走向的时候，它能重新生成结构，甚至给出接下来的走向建议，这类带有交互式的体验，会更让我有身处未来的感觉，我对这样的未来充满了期待。
-                        </p>
-                        <video src="blog_videos/Data Reef.mov" class="col-6 offset-3 my-3" controls></video>
-
-                        <p>相关内容：</p>
-                        <a href="https://mp.weixin.qq.com/s/ZWg_hI2CePdgKLXNnc-5UA">触感数字工作坊 | Data Reef 数据礁 :
-                            空间建构与数码群落</a><br>
-                        <a href="https://mp.weixin.qq.com/s/TSNqBoNCFtUe6opV2J016Q">【活动回顾】“数据礁”工作坊——XR设计和应用的奇妙海洋</a><br>
-                        <img src="blog_images/Data Reef.jpg" class="col-6 offset-3 my-3" alt="Data Reef">
+                        <p>今天是端午节。我承认，这是一句空话。</p>
+                        <p>六年前的这一天，高考发榜，610，不低，但也不高。然而时至今日，我究竟也不明白，高考，对于我来说，到底意味着什么。</p>
+                        <p>只是在那一年，我选择了上海。比之于身处北京的 ZN，我似乎更喜欢 ZN 所描述的上海的风。就这样，来到了上海。四年后本科毕业，尚不知方向的我，顺道去读了研。读研这个决定，更像是一种缓兵之计。我能感受到自己是想要去工作的，可是，在遇到心仪的工作之前，我只能暂时地接受读研。</p>
+                        <p>转变似乎就隐藏在决定保研之后。</p>
+                        <p>大四的夏天，随着毕业之后，以随队延安社会实践的方式，装模作样的走了一场毕业旅行。旅行之后，就开始了一段新的恋爱，不细想，已近两年。</p>
+                        <p>这两年里，不得不说，生活有了很大的压力。不时的，在深夜，会去思考未来的生活。读研之路，也许是很多人所羡慕的，但我知道，这不是自己可以走的路。我不过是假借在上科大的日子，去寻找适合自己走的路，不要读着读着，就天真地以为自己真的可以做科研。</p>
+                        <p>19年末，第一次接触了 disguise，认识了 Johnny。当时在想，要是能进入这家公司就好了。结果，就遇到了实习计划。于是，成为了其中一员。此后的日子，让我对「生活」一词，有了更为丰富的理解。</p>
+                        <p>哦，对了！在 disguise，我终于遇到了和我同一天生日的皮老师。我一直都很期待这一种相遇，我觉得这是一种冥冥之中，玄之又玄的感觉。</p>
+                        <p>随着20年的到来，一场疫情突然而至。这场疫情，于整个世界，该是一场不幸；但是，于我个人，该是一种幸运。在疫情之下，科研的事情被搁置了，我也就更能抽身去关注工作上的事情。这也让我能够全身心地去感受职场工作的生活状态。</p>
+                        <p>我是一个很难判断自己是不是真的喜欢什么的人，但是，我能感知到自己不喜欢什么。</p>
+                        <p>生活，真的被工作所挤占了吗？生活该与工作互斥，还是生活包含了工作。</p>
+                        <p>人生还在进行着，自己也还活着，这就是生活吧。</p>
+                        <p>所谓挤占，不是讨论生活本身，而是在讨论与各类人相处的时间。这边多一些，那边就少一些。而少的那一方，在觉察到自己成为少的那一方，同时又有想变多的需求。此刻若不能满足，矛盾就产生了。</p>
+                        <p>给对方一些空间，也许就是恋爱的艺术？可能更是相处的艺术吧。</p>
+                        <p>胡思乱想，写出来舒服一些。</p>
+                        <p>以上、</p>
                         <hr>
                     </div>
                 </div>
