--- a/travel.html
+++ b/travel.html
@@ -50,9 +50,18 @@
                         </p>
                     </div>
                 </aside>
+                <div class="col-md-8 mt-3 blog-main">
+                    <div class="blog-post">
+                        <h2 class="blog-post-title"><a href="blogs/20200625.html" style="color:rgb(90, 177, 199);">心绪不宁 X 随笔@Shanghai</a></h2>
+                        <small class="blog-post-meta text-muted">2020年06月25日</small>
+                        <p></p>
+                        <a href="blogs/20200625.html">阅读全文</a>
+                        <hr>
+                    </div>
+                </div>
                 <div class="col-md-12 mt-3 blog-main">
                     <div class="blog-post">
-                        <h2 class="blog-post-title"><a href="blogs/20191220.html" style="color:rgb(240, 219, 179);">精匠纸心 X 造纸艺术工作坊@SCA</a></h2>
+                        <h2 class="blog-post-title"><a href="blogs/20191220.html" style="color:rgb(240, 219, 179);">精匠纸心 X 工作坊@SCA</a></h2>
                         <small class="blog-post-meta text-muted">2019年12月20日</small>
                         <p>金绣辰老师用一个下午的时间，带领我们体验了一次工作坊模式下的造纸艺术…</p>
                         <a href="blogs/20191220.html">阅读全文</a>
@@ -61,7 +70,7 @@
                 </div>
                 <div class="col-md-12 mt-3 blog-main">
                     <div class="blog-post">
-                        <h2 class="blog-post-title"><a href="blogs/20191201.html" style="color:lightcoral;">虚拟与现实 X 数据礁工作坊@SCA</a></h2>
+                        <h2 class="blog-post-title"><a href="blogs/20191201.html" style="color:lightcoral;">虚拟与现实 X 工作坊@SCA</a></h2>
                         <small class="blog-post-meta text-muted">2019年11月30日-2019年12月01日</small>
                         <p>不同知识背景下的小伙伴，通力协作，创造了充实又非凡的周末生活…</p>
                         <a href="blogs/20191201.html">阅读全文</a>
@@ -75,7 +84,7 @@
         <hr>
         <div class="container">
                 <img src="images/icon-dark.png" alt="icon" width="30px">
-                <small class="text-muted">&copy;2019 Xin-Scarecrow. All rights reserved.</small>
+                <small class="text-muted">&copy;2019-2020 Xin-Scarecrow. All rights reserved.</small>
                 <p class="text-center text-white"><small>Designed by Yuxin_H.</small></p>
                 <p class="text-right"><a href="#">Back to top</a></p>
             </div>
