--- a/blogs/20191220.html
+++ b/blogs/20191220.html
@@ -42,7 +42,7 @@
             <div class="row">
                 <div class="col-md-12 mt-3 blog-main">
                     <div class="blog-post">
-                        <h2 class="blog-post-title">精匠纸心 X 造纸艺术工作坊@SCA</h2>
+                        <h2 class="blog-post-title">精匠纸心 X 工作坊@SCA</h2>
                         <small class="blog-post-meta text-muted">2019年12月20日</small>
                         <hr>
                         <p>金绣辰老师用一个下午的时间，带领我们体验了一次工作坊模式下的造纸艺术。</p>
@@ -62,7 +62,7 @@
         <hr>
         <div class="container">
                 <img src="../images/icon-dark.png" alt="icon" width="30px">
-                <small class="text-muted">&copy;2019 Xin-Scarecrow. All rights reserved.</small>
+                <small class="text-muted">&copy;2019-2020 Xin-Scarecrow. All rights reserved.</small>
                 <p class="text-center text-white"><small>Designed by Yuxin_H.</small></p>
                 <p class="text-right"><a href="#">Back to top</a></p>
             </div>
