--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <hr>
         <div class="container">
             <img src="images/icon-dark.png" alt="icon" width="30px">
-            <small class="text-muted">&copy;2019 Xin-Scarecrow. All rights reserved.</small>
+            <small class="text-muted">&copy;2019-2020 Xin-Scarecrow. All rights reserved.</small>
             <p class="text-center text-white"><small>Designed by Yuxin_H. <span id="busuanzi_container_site_pv">哇！<span
                             id="busuanzi_value_site_pv"></span>人找到我了。</span></small></p>
             <p class="text-right"><a href="#">Back to top</a></p>
