--- a/travel.html
+++ b/travel.html
@@ -54,7 +54,7 @@
                     <div class="blog-post">
                         <h2 class="blog-post-title"><a href="blogs/20200625.html" style="color:rgb(90, 177, 199);">心绪不宁 X 随笔@Shanghai</a></h2>
                         <small class="blog-post-meta text-muted">2020年06月25日</small>
-                        <p></p>
+                        <p>今天是端午节。我承认，这是一句空话…</p>
                         <a href="blogs/20200625.html">阅读全文</a>
                         <hr>
                     </div>
