--- a/index.html
+++ b/index.html
@@ -88,6 +88,19 @@
             <div class="card-columns">
                 <div class="card shadow-sm">
                     <div class="card-body">
+                        <p class="card-text">人生还在进行着，自己也还活着，这就是生活吧。</p>
+                        <p class="card-text text-right"><small class="text-muted">2020.6.25</small></p>
+                    </div>
+                </div>
+                <div class="card shadow-sm">
+                    <img src="images/lightning/风味实验室.jpg" class="card-img-top" alt="风味实验室">
+                    <div class="card-body">          
+                        <p class="card-text">最近参加了一个节目，有那么一点点的感悟。</p>
+                        <p class="card-text text-right"><small class="text-muted">2020.5.22</small></p>           
+                    </div>
+                </div>
+                <div class="card shadow-sm">
+                    <div class="card-body">
                         <p class="card-text">「其实有时候觉得很有意思，因为年轻的时候觉得 The truth is more important than anything else。但现在了，年纪大了就觉得 what is important is not just the truth but also the other things better as important, for example, other people's feelings. As long as i don't have to living in a lie and also as long as i'm not been denied to live the way i want to live my life」—— All in My Family (2019)[吴皓]</p>
                         <p class="card-text text-right"><small class="text-muted">2019.12.4</small></p>
                     </div>
