--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
             <div class="card-columns">
                 <div class="card shadow-sm">
                     <div class="card-body">
+                        <p class="card-text">只是洞悉了美的惊鸿一刻</p>
+                        <p class="card-text text-right"><small class="text-muted">2020.12.28</small></p>
+                    </div>
+                </div>
+                <div class="card shadow-sm">
+                    <div class="card-body">
                         <p class="card-text">人生还在进行着，自己也还活着，这就是生活吧。</p>
                         <p class="card-text text-right"><small class="text-muted">2020.6.25</small></p>
                     </div>
