--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                     </div>
                 </div>
                 <div class="carousel-item"> <img class="bd-placeholder-img" width="100%" height="auto"
-                        src="images/banner/Cloud.jpg" alt="Cloud">
+                        src="images/banner/落日余晖.jpg" alt="落日余晖">
                     <div class="container">
                         <div class="carousel-caption">
-                            <h6>云</h6>
+                            <h6>落日余晖</h6>
                         </div>
                     </div>
                 </div>
