--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
             <hr>
             <div class="card-columns">
                 <div class="card shadow-sm">
+                    <img src="images/lightning/落日余晖.jpg" class="card-img-top" alt="落日余晖">
+                    <div class="card-body">
+                        <p class="card-text">这令人着迷的蓝色</p>
+                        <p class="card-text text-right"><small class="text-muted">2021.1.2</small></p>
+                    </div>
+                </div>
+                <div class="card shadow-sm">
                     <div class="card-body">
                         <p class="card-text">只是洞悉了美的惊鸿一刻</p>
                         <p class="card-text text-right"><small class="text-muted">2020.12.28</small></p>
