--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div class="card shadow-sm">
-                    <img src="images/lightning/风味实验室.jpg" class="card-img-top" alt="风味实验室">
+                    <img src="images/lightning/风味实验室.png" class="card-img-top" alt="风味实验室">
                     <div class="card-body">          
                         <p class="card-text">最近参加了一个节目，有那么一点点的感悟。</p>
                         <p class="card-text text-right"><small class="text-muted">2020.5.22</small></p>           
